# pokemon_MCTS_simulator

./: .gitignore  CLAUDE.md  COMPARE_DT_VS_REBEL.md  README.md  battle_csv.csv  input.csv  pyproject.toml  refactoring_plan_pokemon_py.md  test.md  いい試合_battle_log_20250324_195334.txt
.claude/: settings.json
.devcontainer/: devcontainer.json
data/: all_battle_history_season_27.csv  item.txt  move.txt  my_fixed_party.json  sample_fixed_party.json  season_35_pokemon_data.csv  season_36_pokemon_data.csv
data/battle_data/: season22.json  season23.json
docs/: blog.md  damage_calculator_api_plan.md  damage_calculator_missing_abilities_report.md  hypothesis_based_policy_value_network.md  project_overview.md  rebel_design.md  rebel_readme.md
frontend/: package.json  pnpm-lock.yaml
notebook/: auto_extracted_pokemon_data.csv  elo_rating_見直し.ipynb  pokemon_data.json  pokemon_party_extraction.ipynb  simulation_test.ipynb  データ変換.ipynb  初手選出を当てる.ipynb
plans/: fastapi_htmx_battle_ui.md
scripts/: analyze_battle_logs.py  compare_dt_vs_rebel.py  compare_rebel_vs_mcts.py  convert_csv_to_trainer_json.py  convert_llm_static_to_chat_sft.py  demo_selection_bert.py  fetch_pokedb_usage.py  finetune_selection_bert.py  generate_llm_static_dataset.py  generate_selfplay_dataset.py  matching.py  plot_training_history.py  pretrain_pokemon_bert.py  run_reinforcement_loop.py  start_battle_ui.sh  train_decision_transformer.py  train_policy_value_network.py  train_rebel.py  train_team_selection.py
src/: battle_data  database_handler.py  models.py  notify_discord.py  pyproject.toml  streamlit_leaderboard.py  streamlit_pokemon_data_checker.py
src/battle_api/: __init__.py  main.py
src/battle_ui/: __init__.py  main.py
src/battle_ui/routers/: __init__.py  api.py  pages.py
src/battle_ui/services/: __init__.py  battle_service.py  rebel_ai_service.py  session_manager.py
src/battle_ui/static/css/: styles.css
src/battle_ui/templates/: base.html
src/battle_ui/templates/components/: action_panel.html  ai_analysis.html  battle_field.html  battle_log.html  battle_result.html  change_pokemon.html  checkpoint_select.html  error.html  field_effects.html  party_display.html  pokemon_card.html  selection_phase.html  trainer_select.html
src/battle_ui/templates/pages/: battle.html  index.html  setup.html
src/damage_calculator_api/: main.py
src/damage_calculator_api/calculators/: damage_calculator.py  stat_calculator.py  type_calculator.py
src/damage_calculator_api/models/: pokemon_models.py
src/damage_calculator_api/routers/: damage.py
src/damage_calculator_api/schemas/: requests.py
src/decision_transformer/: __init__.py  ai_service.py  config.py  data_generator.py  dataset.py  dt_guided_mcts.py  embeddings.py  heads.py  model.py  tokenizer.py  trainer.py
src/hypothesis/: __init__.py  hypothesis_mcts.py  item_belief_state.py  item_prior_database.py  pokemon_usage_database.py  selfplay.py
src/llm/: __init__.py  action_scoring.py  converters.py  eval.py  policy.py  reward.py  selfplay_rl.py  sft_format.py  state_representation.py  static_dataset.py
src/mcts/: main.py  mcts_battle.py
src/pokemon_battle_sim/: battle.py  damage.py  mcts_battle.py  pokemon.py  utils.py
src/policy_value_network/: __init__.py  dataset.py  evaluator.py  network.py  nn_guided_mcts.py  observation_encoder.py  reinforcement_loop.py  team_selection_dataset.py  team_selection_encoder.py  team_selection_network.py  team_selection_trainer.py  team_selector.py  trainer.py
src/rebel/: __init__.py  battle_interface.py  belief_state.py  cfr_solver.py  ev_template.py  full_belief_state.py  move_effectiveness.py  public_state.py  team_composition_belief.py  trainer.py  value_network.py
src/selection_bert/: __init__.py  dataset.py  model.py  selection_belief.py
src/utils/: extract_battle_history.py  extract_pokemon_data_from_article.py  train_word2vec.py
tests/: test_move_effectiveness.py
(+208 files in other folders)
