[project]
name = "mcts-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuke Fukasawa",email = "demonstrundum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "openai (>=1.66.3,<2.0.0)",
    "langchain-openai (>=0.3.8,<0.4.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain-community (>=0.3.19,<0.4.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "fasttext (>=0.9.3,<0.10.0)",
    "numpy (<2.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytest (>=8.4.1,<9.0.0)",
]

[tool.poetry]
version = "2.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
