[project]
name = "mcts-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuke Fukasawa",email = "demonstrundum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openai (>=1.66.3,<2.0.0)",
    "playwright (>=1.50.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "torch (>=2.3.0,<3.0.0)",
    "transformers (>=4.40.1,<5.0.0)",
    "accelerate (>=0.29.3,<1.0.0)",
    "datasets (>=2.20.0,<3.0.0)",
    "peft (>=0.11.1,<0.12.0)",
    "trl (>=0.9.0,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.0,<2.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "python-multipart>=0.0.20",
]
