[project]
name = "mcts-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Yusuke Fukasawa",email = "demonstrundum@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
